Ship enum vocab support: @AsUuid/@AsName on the enum (PRP-28 phase 1)